css/styles.css
/* google font styles
font-family: 'Bangers', cursive;
font-family: 'Trade Winds', cursive;
font-family: 'Oswald', sans-serif; */

* {
  box-sizing: border-box;
}

body {
  font-size: 20px;
  line-height: 25px;
  margin-bottom: 100px;
  font-family: "Oswald", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Bangers", cursive;
  letter-spacing: 0.06em;
  line-height: 0.9;
}

a {
  font-weight: bold;
  color: inherit;
  text-decoration: none;
  font-size: 0.9em;
}

a.text-link::before {
  font-family: "Font Awesome 5 Free";
  background-size: contain;
  margin-left: 6px;
  padding-right: 5px;
  color: #fcf04c;
  content: "\f0c1";
}

a.social-link {
  display: block;
  word-break: break-all;
}

a.social-link i {
  color: #fcf04c;
  margin-left: 6px;
}

button {
  background: #fcf04c;
  border: none;
  padding: 10px 20px;
  border-radius: 25px;
  cursor: pointer;
}

:focus {
  outline: none;
}

p {
  margin-top: 0;
}

.js-tilt {
  position: relative;
  overflow: hidden;
  height: 280px;
  width: 300px;
  transform-style: preserve-3d;
}

/* glitch elem must have absolute position */
.glitch-img {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

.flex-columned {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.flex-rowed-section-content {
  display: flex;
  justify-content: center;
  align-items: stretch;
  flex-wrap: wrap;
  min-height: 100vh;
}

.flex-rowed-section-content div {
  align-self: center;
  padding: 21px;
  width: 100%;
}

.flex-rowed-content {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 !important;
}

.flex-rowed-content div {
  padding: 0 21px;
}

.flex-rowed-space-around {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  width: 100%;
}

#curiosity,
#enlightenment,
#solution,
#portfolio,
#testimonials,
#commitment {
  min-height: 100vh;
  border-bottom: 3px solid #111;
}

footer.page-footer {
  text-align: center;
  padding: 10px;
}
footer.page-footer p {
  padding: 0;
  margin: 0;
}

/* Tablet size and above */
@media only screen and (min-width: 768px) {
  body {
    margin-bottom: 10vh;
  }

  header {
    height: 10vh;
  }

  #commitment .commitment-step {
    margin: 21px;
    height: 150px;
    width: 150px;
    font-size: inherit !important;
  }

}

/* Desktop size and above */
@media only screen and (min-width: 1024px) {
  body {
    margin-bottom: 0;
    margin-right: 242px;
  }

  header {
    position: fixed;
    top: 0;
    right: 0;
    width: 242px;
    height: 100%;
    padding: 21px;
  }

  header .lopez-creative-logo svg {
    width: 100%;
    height: auto;
  }

  header .lopez-creative-logo h1 {
    font-size: 1.8em;
  }

  header .lopez-creative-logo h1 span {
    margin-left: -0.2em;
  }

  header .nav-callout {
    display: block;
  }

  header ul {
    display: block;
  }

  header ul li {
    text-align: left;
    margin-bottom: 15px;
  }

  header ul li:last-child {
    display: block;
  }

  header ul li a .nav-text {
    display: inline-block;
  }

  header ul li a.degree-link {
    display: block;
  }

  header ul li svg {
    display: inline-block;
  }

  .flex-rowed-section-content {
    flex-wrap: nowrap;
  }

  #curiosity {
    font-size: 2em;
  }

  #curiosity .fly-in {
    font-size: 4em;
  }

  #curiosity .fly-in div svg {
    width: 42vw;
  }

  #enlightenment .turtle-content .cursor {
    display: block !important;
  }
}

@keyframes flicker {
  0% {
    opacity: 0.27861;
  }

  5% {
    opacity: 0.34769;
  }

  10% {
    opacity: 0.23604;
  }

  15% {
    opacity: 0.90626;
  }

  20% {
    opacity: 0.18128;
  }

  25% {
    opacity: 0.83891;
  }

  30% {
    opacity: 0.65583;
  }

  35% {
    opacity: 0.67807;
  }

  40% {
    opacity: 0.26559;
  }

  45% {
    opacity: 0.84693;
  }

  50% {
    opacity: 0.96019;
  }

  55% {
    opacity: 0.08594;
  }

  60% {
    opacity: 0.20313;
  }

  65% {
    opacity: 0.71988;
  }

  70% {
    opacity: 0.53455;
  }

  75% {
    opacity: 0.37288;
  }

  80% {
    opacity: 0.71428;
  }

  85% {
    opacity: 0.70419;
  }

  90% {
    opacity: 0.7003;
  }

  95% {
    opacity: 0.36108;
  }

  100% {
    opacity: 0.24387;
  }
}

@keyframes bounce {
  0% {
    transform: scale(1.1);
    opacity: 1;
  }

  50% {
    transform: scale(1.6);
    opacity: 0.7;
  }

  60% {
    transform: scale(0.6);
    opacity: 1;
  }

  80% {
    transform: scale(0.95);
  }

  100% {
    transform: scale(0.85);
  }
}

@keyframes blink {
  0% {
    visibility: 1;
  }

  2% {
    opacity: 0;
  }

  4% {
    opacity: 1;
  }

  100% {
    opacity: 1;
  }
}

@keyframes heartbeat {
  0%, 100% {
    transform: scale(1);
  }
  50%, 67% {
    transform: scaleY(1.05);
  }
  70% {
    transform: scale(1.05);
  }
}

